...

                const SizedBox(height: AppConstants.smallPadding / 2),

                // Subtitle
                Center(
                  child: Text(
                    'Please sign up to get started',
                    style: Theme.of(context).textTheme.bodyMedium?.copyWith(
                          color: Theme.of(context).colorScheme.onSurfaceVariant,
                        ),
                  ),
                ),

...
